# cmake-qt-swig-vcpkg-vulkan

./: CMakeLists.txt  README.adoc  main.cpp  vcpkg.json
